Add more test cases
Signed-off-by: Chi Wai Chan <chiwai.chan@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -497,6 +497,24 @@ jobs:
     - name: Test enter and exit maintainenace mode with set noout and stop osd
       run: ~/actionutils.sh test_maintenance_enter_set_noout_stop_osds_and_exit node-wrk1
 
+    - name: Scale down the cluster to 3 nodes
+      run: |
+        set -uex
+        ~/actionutils.sh headexec remove_disk osd.4
+        ~/actionutils.sh headexec remove_node node-wrk3
+
+        if ~/actionutils.sh headexec "microceph cluster maintenance enter node-wrk1"; then
+          echo "Unexpected to succeed entering maintenance mode with less than 4 nodes"
+          exit 1
+        fi
+        echo "It's expected to fail entering maintenance mode with less than 4 nodes"
+
+    - name: Test force enter and exit maintainenace mode without set noout and stop osd
+      run: ~/actionutils.sh test_maintenance_enter_and_exit_force node-wrk1
+
+    - name: Test force enter and exit maintainenace mode with set noout and stop osd
+      run: ~/actionutils.sh test_maintenance_enter_set_noout_stop_osds_and_exit_force node-wrk1
+
   loop-file-tests:
     name: Test with loopback file OSDs
     runs-on: ubuntu-22.04
