Add some buffer for the cluster to settle
Signed-off-by: Chi Wai Chan <chiwai.chan@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -485,6 +485,9 @@ jobs:
         done
         ~/actionutils.sh headexec wait_for_osds 4
 
+    - name: Wait for ceph cluster to settle
+      run: sleep 30
+
     - name: Test dry run maintenance enter
       run: ~/actionutils.sh test_dry_run_maintenance_enter node-wrk1
 
