--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -247,6 +247,7 @@ jobs:
       run: |
         ~/actionutils.sh install_hurl
         ~/actionutils.sh hurl tests/hurl/services-mon.hurl
+        ~/actionutils.sh hurl tests/hurl/osds-put-failed.hurl
 
   multi-node-tests:
     name: Multi node testing
