Introduce ops/maintenance endpoint.
Signed-off-by: Chi Wai Chan <chiwai.chan@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -248,6 +248,7 @@ jobs:
         ~/actionutils.sh install_hurl
         ~/actionutils.sh hurl tests/hurl/services-mon.hurl
         ~/actionutils.sh hurl tests/hurl/osds-put-failed.hurl
+        ~/actionutils.sh hurl tests/hurl/maintenance-put-failed.hurl
 
   multi-node-tests:
     name: Multi node testing
